main page to react

--- a/pages/dev/test-site/main.sass
+++ b/pages/dev/test-site/main.sass
@@ -9,17 +9,17 @@ html, body
 a
   color: white
 
-a:hover
-  text-decoration: none
+  &:hover
+    text-decoration: none
 
 .nohighlight
   color: white
 
 .start
   width: 100%
-  display: flex;
-  justify-content: center;
-  align-items: center;  
+  display: flex
+  justify-content: center
+  align-items: center
   height: 95vh
   color: white
 
@@ -33,27 +33,27 @@ a:hover
     width: 100%
 
 .text
-  position:absolute
+  position: absolute
   z-index: 100
   padding: 0 20px
   display: grid
   margin: auto
 
 .cover-image
-  position:absolute
-  z-index:5
-  left:0px
-  top:0px
+  position: absolute
+  z-index: 5
+  left: 0px
+  top: 0px
   height: 100vh
   width: 100%
   object-fit: cover
 
 .sea-image
-  position:absolute
+  position: absolute
   z-index: 6
   height: 100vh
   width: 30%
-  object-fit: cover   
+  object-fit: cover
 
 .parent
   display: inline-flex
@@ -61,7 +61,7 @@ a:hover
 
 .big
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   text-align: center
 
 .big-text
@@ -83,7 +83,7 @@ a:hover
   display: grid
   grid-template-columns: 25% 25% 25% 25%
   margin-bottom: 3%
-  text-shadow: black 1px 0 10px;
+  text-shadow: black 1px 0 10px
 
   .stat
     display: grid
@@ -91,35 +91,35 @@ a:hover
 
   a
     color: white
-    
+
 .rockd
   background-color: green
 
 .btn
-  background-color: #363434;
-  border: none;
-  color: white;
-  padding: 13px 10px;
+  background-color: #363434
+  border: none
+  color: white
+  padding: 13px 10px
   margin: 5% 15%
-  text-align: center;
-  text-decoration: none;
-  border-radius: 12px;
+  text-align: center
+  text-decoration: none
+  border-radius: 12px
 
-.btn:hover 
-  background-color: #545151 
+  &:hover
+    background-color: #545151
 
-.buttons1 
+.buttons1
   font-size: 20px
   padding: 0px
   display: grid
   grid-template-columns: 33.33% 33.33% 33.33%
 
-  a 
+  a
     color: white
     text-decoration: none
 
-  a:hover
-    color: white
+    &:hover
+      color: white
 
 .rockd-png
   width: 22px
@@ -127,15 +127,15 @@ a:hover
   float: left
   padding-top: 5px
 
-.country_container 
+.country_container
   height: 100vh
 
 .country
   height: 100%
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  display: flex
+  justify-content: center
+  align-items: center
+  text-align: center
   color: white
 
 .img
@@ -164,11 +164,11 @@ a:hover
 .title
   margin: 0
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   padding: 20vh 0
   text-align: center
 
-.header 
+.header
   margin: 0 20%
   text-shadow: black 1px 0 10px
 
@@ -198,34 +198,35 @@ a:hover
   height: 80vh
 
 .donate-title
-  a 
-    color:white
-  a:hover
-    text-decoration: none
+  a
+    color: white
+
+    &:hover
+      text-decoration: none
 
   color: white
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  font-family: "Maven Pro", sans-serif;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6)
+  font-family: "Maven Pro", sans-serif
   padding: 0
 
 .donate-left
   float: left
   width: 50%
   height: 80vh
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex
+  justify-content: center
+  align-items: center
 
 .donate-right
   float: right
   width: 50%
   height: 80vh
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex
+  justify-content: center
+  align-items: center
 
 .donate-info
-  background: rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.6)
   padding: 25px
   color: black
   width: 80%
@@ -237,8 +238,8 @@ a:hover
     text-decoration: none
 
 .donate-img
-  position:absolute
-  z-index:5
+  position: absolute
+  z-index: 5
   height: 80vh
   width: 100%
   object-fit: cover
@@ -247,7 +248,7 @@ a:hover
   margin: 0
   padding: 0
 
-.app-box 
+.app-box
   height: 15vh
   display: flex
   width: 60%
@@ -271,16 +272,15 @@ a:hover
   margin: auto
   margin-left: 6%
 
-
-#api  
+#api
   position: relative
   height: 30vh
   background-color: white
 
 #api-circle-text
-  display: table-cell;
-  vertical-align: middle;
-  color: #6bbe98;
+  display: table-cell
+  vertical-align: middle
+  color: #6bbe98
   font-size: 72px
   font-weight: 500
 
@@ -288,27 +288,27 @@ a:hover
   float: left
   margin-left: 15%
   margin-right: 50px
-  background-color: #fff;
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-  text-align: center;
-  display: table;
-  border: 11px solid #6bbe98;
-  color: #4BABBf;
+  background-color: #fff
+  height: 200px
+  width: 200px
+  border-radius: 50%
+  text-align: center
+  display: table
+  border: 11px solid #6bbe98
+  color: #4BABBf
 
 #api-text
   padding-top: 50px
   margin-right: 15%
-  color: #4bab7f;
-  font-size: 20px;
-  line-height: 28px;
-  font-weight: 400;
+  color: #4bab7f
+  font-size: 20px
+  line-height: 28px
+  font-weight: 400
 
-#publications 
+#publications
   margin: 100px 10%
 
-#pub-title 
+#pub-title
   text-align: left
   color: #E0E1E6
   position: relative
@@ -324,25 +324,25 @@ a:hover
   li
     counter-increment: pub-counter -1
 
-  li::marker
-    font-size: 35px;
-    color: #babdc8;
-    content: counter(pub-counter) " "
-    counter-increment: pub-counter
+    &::marker
+      font-size: 35px
+      color: #babdc8
+      content: counter(pub-counter) " "
+      counter-increment: pub-counter
 
-#about  
+#about
   margin: 0 10%
 
 .about-row
   margin: 4%
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 200;
+  font-size: 18px
+  line-height: 28px
+  font-weight: 200
 
 .about-body-subtitle
   float: left
-  font-size: 22px;
-  font-weight: 200;
+  font-size: 22px
+  font-weight: 200
 
 .about-body
   margin-left: 30%
@@ -354,19 +354,19 @@ a:hover
   padding-bottom: 0
 
 .line
-  width: 100%;
-  border-bottom: 1px solid #E0E1E6;
-  position: absolute;
+  width: 100%
+  border-bottom: 1px solid #E0E1E6
+  position: absolute
 
 .geology-img
-  position:absolute
+  position: absolute
   z-index: 0
   height: 100vh
   width: 100%
   object-fit: cover
 
 .map-info
-  position:absolute
+  position: absolute
   z-index: 1
   color: white
   font-size: 20px
@@ -375,27 +375,26 @@ a:hover
   background-color: rgba(0,0,0,.4)
 
 .map-title
-  position:absolute
+  position: absolute
   z-index: 1
   color: white
   width: 50%
   margin: 0 25%
 
 .pub-line
-  width: 80%;
-  border-bottom: 1px solid #E0E1E6;
-  position: absolute;
+  width: 80%
+  border-bottom: 1px solid #E0E1E6
+  position: absolute
 
 .text-donate
-  position:absolute
+  position: absolute
   z-index: 100
   padding: 0 20px
 
-
 .location
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 40vh;
+  display: grid
+  grid-template-columns: 25% 25% 25% 25%
+  grid-template-rows: 40vh
 
 .t1
   margin-left: 10%
@@ -406,15 +405,15 @@ a:hover
 .location-img
   width: 100%
   height: 40vh
-  display: flex;
+  display: flex
   margin: auto
   object-fit: cover
 
 .location-text
   color: black
-  display: grid;
-  grid-template-rows: 50% 50%;
-  
+  display: grid
+  grid-template-rows: 50% 50%
+
   h1
     font-size: 45px
     font-weight: 600
@@ -433,24 +432,19 @@ a:hover
   grid-template-columns: 40% 60%
   grid-template-rows: 30vh
 
-  
   .link-title
     display: grid
     margin: auto
-    margin-left: 20%  
+    margin-left: 20%
     font-size: 35px
-    
+
     a
       color: black
 
   p
     display: grid
     margin: auto
-    margin-left: 10% 
+    margin-left: 10%
     margin-right: 10%
     color: black
     font-size: 16px
-
-
-
-  
