--- a/pages/dev/test-site/main.styl
+++ b/pages/dev/test-site/main.styl
@@ -1,22 +1,15 @@
 .nav
   position: fixed
+  top: 0
+  left: 0
   width: 100%
   z-index: 10000
+  display: flex
+  background-color: #015eab;
 
-  ul 
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #015eab;
-
-  li 
-    float: left;
-    font-size: 15px
-
-  li a 
+  a 
     display: block;
-    color: white;
+    color: green;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none
