--- a/pages/dev/test-site/main.sass
+++ b/pages/dev/test-site/main.sass
@@ -3,8 +3,8 @@ html, body
   background-color: white
   margin: 0
 
-#total
-  background-color: white
+.total
+  width: 100%
 
 a
   color: white
@@ -20,7 +20,7 @@ a
   display: flex
   justify-content: center
   align-items: center
-  height: 95vh
+  height: 100vh
   color: white
 
   li
@@ -395,41 +395,35 @@ a
   z-index: 100
   padding: 0 20px
 
-.location
-  display: grid
-  grid-template-columns: 25% 25% 25% 25%
-  grid-template-rows: 40vh
-
-.t1
-  margin-left: 10%
-
-.t2
-  margin-right: 10%
-
-.location-img
-  width: 100%
-  height: 40vh
+.locations
   display: flex
-  margin: auto
-  object-fit: cover
+  width: 100%
+  flex-wrap: wrap
 
-.location-text
-  color: black
-  display: grid
-  grid-template-rows: 50% 50%
+  .location-img
+    width: 25%
+    height: 40vh
+    object-fit: cover
+    flex: 0 0 25%
 
-  h1
-    font-size: 45px
-    font-weight: 600
-    display: grid
-    margin: auto
-    margin-top: 33%
+  .location-text
+    width: 25%
+    color: black
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    flex: 0 0 25%
+
+    h1
+      font-size: 45px
+      font-weight: 600
+      margin: 0
+
 
 .caption
   font-size: 15px
   font-weight: 600
-  display: grid
-  margin: auto
 
 .temp-class
   display: grid
