--- a/pages/dev/test-site/main.sass
+++ b/pages/dev/test-site/main.sass
@@ -88,46 +88,39 @@ a
   font-family: Helvetica, sans-serif
 
 .stats
-  display: grid
-  grid-template-columns: 25% 25% 25% 25%
-  margin-bottom: 3%
+  display: flex
+  gap: 50px
   text-shadow: black 1px 0 10px
+  align-items: center
+  justify-content: center
 
   .stat
-    display: grid
-    margin: auto
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
 
   a
     color: white
 
-.rockd
-  background-color: green
-
-.btn
-  background-color: #363434
-  border: none
-  color: white
-  padding: 13px 10px
-  text-align: center
-  text-decoration: none
-  border-radius: 12px
-
-  &:hover
-    background-color: #545151
-
-.buttons1
+.buttons
   font-size: 20px
   padding: 0px
   display: flex
-  gap: 100px
+  gap: 20px
+  flex-wrap: wrap
   justify-content: center
 
-  a
-    color: white
-    text-decoration: none
+  .btn
+    text-align: center
+    text-wrap: wrap
 
-    &:hover
+    a
       color: white
+      text-decoration: none
+
+      &:hover
+        color: white
 
 .rockd-png
   width: 22px
@@ -446,3 +439,6 @@ a
     margin-right: 10%
     color: black
     font-size: 16px
+
+.hide
+  display: none
