--- a/pages/dev/test-site/publications/main.styl
+++ b/pages/dev/test-site/publications/main.styl
@@ -2,6 +2,9 @@
     background-color: white
     color: black
 
+#publications
+  margin: 8vh 20% 5vh 20%
+
 #container
   background-color: white
 
@@ -23,15 +26,11 @@ p
   border-bottom: 1px solid #E0E1E6;
   position: absolute;
 
-#publications 
-  padding: 50px 20%
-
 #pub-title 
   text-align: left
-  color: #E0E1E6
   position: relative
-  padding-bottom: 0
-  margin-bottom: 0
+  margin: 0
+  padding: 0
 
 .pub-list
   padding-top: 10px
