--- a/pages/dev/test-site/people/main.styl
+++ b/pages/dev/test-site/people/main.styl
@@ -1,5 +1,4 @@
 .htnl, .body, .main
-    background-color: white
     color: black
 
 a:hover
@@ -21,29 +20,25 @@ a:hover
 
 
 .people
-    color: white
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+    justify-content: center
+    gap: 30px
+    margin: 50px 0
 
-.left
-    float: left
-    width: 30%
-    margin-left: 20%
-
-.right
-    float: left
-    width: 30%
-    margin-right: 20%
-
-.person-info
-    height: 30vh
-    width: 90%
-    position: relative
-    margin: 5%
+    .person-info
+        flex-basis: 40%
+        height: 30vh
+        width: 25%
+        position: relative
 
 .text
     text-align: right
     position:absolute
     padding: 5px 20px
     z-index: 100
+    color: white
     background-color: rgba(0, 0, 0, 0.2)
     bottom:0
     right: 0
