--- a/pages/dev/test-site/main.sass
+++ b/pages/dev/test-site/main.sass
@@ -193,10 +193,18 @@ a
 
 .donate-container
   height: 80vh
+  display: flex
+  justify-content: center
+  align-items: center
 
 .donate-title
+  flex: 0 0 50%
+  width: 100%
+  text-decoration: none
+
   a
     color: white
+    text-decoration: none
 
     &:hover
       text-decoration: none
@@ -206,23 +214,8 @@ a
   font-family: "Maven Pro", sans-serif
   padding: 0
 
-.donate-left
-  float: left
-  width: 50%
-  height: 80vh
-  display: flex
-  justify-content: center
-  align-items: center
-
-.donate-right
-  float: right
-  width: 50%
-  height: 80vh
-  display: flex
-  justify-content: center
-  align-items: center
-
 .donate-info
+  flex: 0 0 50%
   background: rgba(255,255,255,0.6)
   padding: 25px
   color: black
@@ -387,6 +380,11 @@ a
   position: absolute
   z-index: 100
   padding: 0 20px
+  display: flex
+  width: 100%
+  justify-content: center
+  align-items: center
+  gap: 30px
 
 .locations
   display: flex
