--- a/pages/dev/test-site/main.module.sass
+++ b/pages/dev/test-site/main.module.sass
@@ -8,7 +8,7 @@
   background-color: #015eab
 
   a 
-    color: green;
+    color: green
     text-align: center
     padding: 14px 16px
     text-decoration: none
@@ -42,9 +42,6 @@
 
 .nav-logo
   padding-top: 5px
-
-.funding-logo
-  padding: 10px
 
 .footer-nav
   list-style-type: none
