--- a/pages/dev/test-site/main.sass
+++ b/pages/dev/test-site/main.sass
@@ -34,17 +34,29 @@ a
 
 .text
   position: absolute
-  top: 0
+  top: 5vh
   left: 0
   width: 100%
   z-index: 100
-  padding: 0 20px
   display: flex
   flex-direction: column
+  gap: 20px
+  height: 95vh
 
   .header
     text-shadow: black 1px 0 10px
     text-align: center
+    display: flex
+    justify-content: center
+    gap: 10px
+
+    .main-title
+      font-size: 60px
+      padding: 0
+        
+    .version
+      font-size: 40px
+      padding: 0
   
   .big-text
     text-align: center
@@ -82,6 +94,9 @@ a
   display: grid
   margin: auto
   color: white
+
+  a
+    color: white !important
 
 .top-stat
   font-size: 35px
@@ -168,14 +183,6 @@ a
   font-family: "Maven Pro", sans-serif
   padding: 20vh 0
   text-align: center
-
-#main-title
-  display: inline-block
-
-.version
-  display: inline-block
-  margin-left: 20px
-  font-size: 40px
 
 #about
   height: 100vh
@@ -400,6 +407,7 @@ a
   .location-text
     width: 25%
     color: black
+    background-color: white
     display: flex
     flex-direction: column
     justify-content: center
@@ -440,3 +448,18 @@ a
 
 .hide
   display: none
+
+.footer-text-container
+  display: flex
+  flex-direction: column
+  justify-content: center
+  align-items: center
+  color: white
+  padding: 20px 0
+
+.footer-text 
+  display: flex
+  gap: 2px
+
+  a
+    color: white !important
