--- a/pages/dev/test-site/main.styl
+++ b/pages/dev/test-site/main.styl
@@ -5,12 +5,20 @@
   width: 100%
   z-index: 10000
   display: flex
+  gap: 10px
   background-color: #015eab;
+  height: 5vh
+  padding: 0 10px
+  align-items: center
+
+  .nav-link
+    display: flex
+    justify-content: center
+    align-items: center
 
   a 
-    color: green;
+    color: white !important;
     text-align: center;
-    padding: 14px 16px;
     text-decoration: none
 
 
@@ -21,6 +29,19 @@
   background-color: #015EAB
   margin: 0
 
+  .footer-nav
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    gap: 10px
+    
+    a
+      color: white !important
+
+    a:hover
+      text-decoration: none
+
 .footer-container
   display: flex;
   flex-direction: row;
@@ -28,36 +49,8 @@
   margin: 0 auto;
   width: 60%
 
-.col-sm-4
-  color: white
-  width: 33.333%
-  color: #E0E1E6;
-  font-weight: 200;
-  text-align: center;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-  font-weight: bold
-  padding-bottom: 18px
-
 .nav-logo
   padding-top: 5px
-
-.funding-logo
-  padding: 10px
-
-.footer-nav
-  list-style-type: none
-  padding-right: 40px
-
-  li
-    padding: 5px 0
-
-  a
-    color: white
-
-  a:hover
-    text-decoration: none
 
 .git_logo
   vertical-align: sub
