--- a/pages/dev/test-site/publications/main.styl
+++ b/pages/dev/test-site/publications/main.styl
@@ -1,6 +1,6 @@
 .htnl, .body, .main
     background-color: white
-    color: black
+    color: black !important
 
 #publications
   margin: 8vh 20% 5vh 20%
@@ -16,14 +16,9 @@ a:hover
   font-family: "Maven Pro", sans-serif;
   text-align: center
 
-p 
-    margin-bottom: 10px;
-    margin-top: 0;
-    color: #E0E1E6
-
 .pub-line
   width: 60%;
-  border-bottom: 1px solid #E0E1E6;
+  border-bottom: 1px solid black;
   position: absolute;
 
 #pub-title 
@@ -31,6 +26,7 @@ p
   position: relative
   margin: 0
   padding: 0
+  color: black
 
 .pub-list
   padding-top: 10px
@@ -49,3 +45,4 @@ p
 
 .blurb
   font-size: 15px
+  color: black
