--- a/pages/dev/test-site/donate/main.sass
+++ b/pages/dev/test-site/donate/main.sass
@@ -7,12 +7,12 @@ a:hover
 
 .big
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   text-align: center
 
 p 
-  margin-bottom: 10px;
-  margin-top: 0;
+  margin-bottom: 10px
+  margin-top: 0
 
 .donate-container
   height: 80vh
@@ -20,7 +20,7 @@ p
 .title
   margin: 0
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   padding: 20vh 0
   text-align: center
   
@@ -31,28 +31,28 @@ p
     text-decoration: none
 
   color: white
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  font-family: "Maven Pro", sans-serif;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6)
+  font-family: "Maven Pro", sans-serif
   padding: 0
 
 .donate-left
   float: left
   width: 50%
   height: 80vh
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex
+  justify-content: center
+  align-items: center
 
 .donate-right
   float: right
   width: 50%
   height: 80vh
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex
+  justify-content: center
+  align-items: center
 
 .donate-info
-  background: rgba(255,255,255,0.6);
+  background: rgba(255,255,255,0.6)
   padding: 25px
   color: black
   width: 80%
