--- a/pages/dev/test-site/people/main.styl
+++ b/pages/dev/test-site/people/main.styl
@@ -5,7 +5,7 @@ a:hover
     text-decoration: none
 
 .big
-    color: #E0E1E6
+    color: black
     text-align: left
     font-size: 75px
     font-family: "Maven Pro", sans-serif
@@ -14,7 +14,7 @@ a:hover
     padding-top: 100px
 
 .line
-  border-bottom: 1px solid #E0E1E6;
+  border-bottom: 1px solid black;
   width: 60%
   margin: 0 20% 
 
@@ -25,29 +25,36 @@ a:hover
     align-items: center
     justify-content: center
     gap: 30px
-    margin: 50px 0
+    margin: 50px 20%
 
     .person-info
-        flex-basis: 40%
+        flex-basis: 45%
         height: 30vh
-        width: 25%
+        width: 45%
         position: relative
 
-.text
-    text-align: right
-    position:absolute
-    padding: 5px 20px
-    z-index: 100
-    color: white
-    background-color: rgba(0, 0, 0, 0.2)
-    bottom:0
-    right: 0
+        img
+            height: 100%
 
-    a
+        a
+            color: white !important
+    p
+        text-align: right
+        position:absolute
+        padding: 5px 20px
+        z-index: 100
         color: white
+        background-color: rgba(0, 0, 0, 0.2)
+        bottom:0
+        right: 0
+        white-space: nowrap
+        margin: 5px
 
-    a:hover
-        color: white
+        a
+            color: white
+
+        a:hover
+            color: white
 
 .back-img
     position:absolute
@@ -68,4 +75,4 @@ e
 
 .subtitle
   margin-left: 20%
-  color: #E0E1E6;
+  color: black;
