--- a/pages/dev/test-site/about/main.styl
+++ b/pages/dev/test-site/about/main.styl
@@ -2,6 +2,9 @@
     color: black
     background-color: white
 
+h1
+  margin: 0
+
 .body
   background-color: white
   padding-top: 5vh
@@ -53,7 +56,7 @@ a:hover
   color: white
 
 
-.big
+.title-about
   font-size: 72px
   font-family: "Maven Pro", sans-serif;
   text-align: left
