main oage styling issue

--- a/src/components/icon.module.sass
+++ b/src/components/icon.module.sass
@@ -20,7 +20,7 @@
     color: unset
 
 .page-header
-  margin: 1.2em 0 1.2em
+  padding: 1.2em 0 1.2em
   display: flex
   flex-direction: row
   align-items: start
