--- a/pages/maps/main.module.scss
+++ b/pages/maps/main.module.scss
@@ -8,8 +8,10 @@
 }
 
 .maps-list {
-  list-style: none;
   padding: 0;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
 
 .source-id {
