main page styling

--- a/src/layouts/main.module.sass
+++ b/src/layouts/main.module.sass
@@ -7,8 +7,7 @@
   left: 0
 
 .content-page
-  padding: 2em auto 3em
-  max-width: 78em
+  padding: 2em 20% !important
   padding: 0 4em
   @media only screen and (max-width: 900px)
     padding: 0 1em
