--- a/pages/columns/main.module.scss
+++ b/pages/columns/main.module.scss
@@ -60,3 +60,8 @@ h2 {
     background-color: yellow;
     color: black;
 }
+
+.col-id, .col-group, .col-link {
+    margin: auto;
+    margin-left: 0;
+}
