only include typed items

--- a/pages/lex/environments/main.module.scss
+++ b/pages/lex/environments/main.module.scss
@@ -22,8 +22,9 @@ h3, h2 {
                     gap: 5px;
                     flex-wrap: wrap;
                     align-items: center;
+
                     .environ-name {
-                        padding: 0.5em;
+                        padding: 2px 6px;
                         margin: .2em 0;
                         border-radius: 0.2em;  
                     }
