--- a/pages/lex/economics/main.module.scss
+++ b/pages/lex/economics/main.module.scss
@@ -3,27 +3,27 @@ h3, h2 {
     padding: 0;
 }
 
-.environment-list {
+.econ-list {
     display: flex;
     flex-direction: column;
     gap: 1.3em;
 
-    .environment-class-group {
+    .econ-class-group {
         display: flex;
         flex-direction: column;
         gap: 1em;
 
-        .environment-group {
+        .econ-group {
             border-left: 2px solid rgb(56, 62, 71);
             padding-left: 1em;
 
-                .environment-items {
+                .econ-items {
                     display: flex;
                     gap: 5px;
                     flex-wrap: wrap;
                     align-items: center;
 
-                    .environ-name {
+                    .econ-name {
                         padding: 2px 6px;
                         margin: .2em 0;
                         border-radius: 0.2em;  
