--- a/pages/lex/intervals/main.module.scss
+++ b/pages/lex/intervals/main.module.scss
@@ -3,32 +3,25 @@ h3, h2 {
     padding: 0;
 }
 
-.environment-list {
+.int-list {
     display: flex;
     flex-direction: column;
     gap: 1.3em;
 
-    .environment-class-group {
+    h2 {
+      margin: 0.5em 0;
+    }
+
+    .int-items {
         display: flex;
-        flex-direction: column;
-        gap: 1em;
+        gap: 5px;
+        flex-wrap: wrap;
+        align-items: center;
 
-        .environment-group {
-            border-left: 2px solid rgb(56, 62, 71);
-            padding-left: 1em;
-
-                .environment-items {
-                    display: flex;
-                    gap: 5px;
-                    flex-wrap: wrap;
-                    align-items: center;
-
-                    .environ-name {
-                        padding: 2px 6px;
-                        margin: .2em 0;
-                        border-radius: 0.2em;  
-                    }
-                }
+        .int-name {
+            padding: 2px 6px;
+            margin: .2em 0;
+            border-radius: 0.2em;  
         }
     }
 }
@@ -47,11 +40,22 @@ h3, h2 {
     background-color: var(--background-color);
     color: var(--text-emphasized-color);
     font-size: 1em;
-    margin: 3px;
+    margin: 3px;  
 
     &:focus {
       outline: none;
       box-shadow: 0 0 0.2em var(--text-emphasized-color);
     }
   }
+}
+
+.int-tooltip {
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+ul, li { 
+  margin: 0;
 }
