update column tables

--- a/pages/columns/main.module.scss
+++ b/pages/columns/main.module.scss
@@ -43,7 +43,7 @@ h2 {
 
 .column-row {
     display: grid;
-    grid-template-columns: 10% 60% 20% 10%
+    grid-template-columns: 10% 70% 20%
 }
 
 .active, .inprocess, .obsolete {
