added popups on markers

--- a/pages/columns/main.module.scss
+++ b/pages/columns/main.module.scss
@@ -74,3 +74,10 @@ h2 {
     margin: auto;
     margin-left: 0;
 }
+
+.popup {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: aqua;
+}
