--- a/pages/lex/intervals/@id/main.scss
+++ b/pages/lex/intervals/@id/main.scss
@@ -42,7 +42,6 @@ ul, h3 {
 .table {
     background-color: var(--secondary-color);
     color: var(--text-emphasized-color);
-    border: 2px solid #000;
 
     p {
         margin: 0;
@@ -57,15 +56,13 @@ ul, h3 {
     }
 }
 
-#map {
-    width: 60%;
-    height: 100%;
-    position: absolute;
-    z-index: 1;
-}
 
 .int-page {
     display: flex;
     flex-direction: column;
     gap: 1em;
+}
+
+.map-area-container {
+    width: 100% !important;
 }
