--- a/pages/lex/strat-names/main.module.scss
+++ b/pages/lex/strat-names/main.module.scss
@@ -8,7 +8,7 @@
         flex-direction: column;
         gap: 1em;
 
-        .strat-subgroup {
+        .strat-subgroup, .strat-group {
             border-left: 2px solid rgb(56, 62, 71);
             padding-left: 1em;
 
@@ -26,4 +26,32 @@
                 }
         }
     }
+}
+
+h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+}
+
+.search-bar {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+
+  input {
+    width: 100%;
+    padding: 0.5em;
+    border-radius: 0.2em;
+    border: none;
+    background-color: var(--background-color);
+    color: var(--text-emphasized-color);
+    font-size: 1em;
+    margin: 3px;  
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0.2em var(--text-emphasized-color);
+    }
+  }
 }
