--- a/pages/dev/test-site/people/main.styl
+++ b/pages/dev/test-site/people/main.styl
@@ -82,3 +82,15 @@ a:hover
 .subtitle
   margin-left: 20%
   color: black;
+
+.search-bar 
+    background-color: white
+    margin: .5em 20%
+
+    input
+        background-color: white
+        color: black
+
+.divider
+    background-color: black
+    margin: 0 20% !important
