employee type tags on filter

--- a/pages/dev/test-site/people/main.styl
+++ b/pages/dev/test-site/people/main.styl
@@ -94,3 +94,28 @@ a:hover
 .divider
     background-color: black
     margin: 0 20% !important
+
+.input-container
+    display: flex
+    align-items: center
+    gap: 5px
+    width: 80%
+
+.tags
+    display: flex
+    color: white
+    gap: 5px
+
+    .filter-card
+        padding: 2px 5px
+        background-color: white
+        color: black
+        border-radius: 5%
+
+    .selected
+        background-color: grey
+
+.search-bar
+    display: flex
+    flex-direction: column
+
