--- a/pages/columns/main.scss
+++ b/pages/columns/main.scss
@@ -20,6 +20,7 @@ h2 {
 
 .search-bar {
   display: flex;
+  flex-direction: row;
   gap: 5px;
   align-items: center;
   justify-content: center;
@@ -94,8 +95,8 @@ h2 {
 }
 
 #map {
-  width: 60%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 1;
 }
