--- a/pages/columns/main.scss
+++ b/pages/columns/main.scss
@@ -24,7 +24,7 @@ h2 {
   gap: 5px;
   align-items: center;
   justify-content: center;
-  margin-bottom: 1em;
+  margin: 1em 0;
 
   input {
     width: 100%;
