--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -19,5 +19,9 @@
 .app-shell
   background-color: var(--background-color)
 
-.column-view
+.column-map, #map 
+  width: 100%
+  height: 100%
+  aspect-ratio: 3/2
+  cursor: pointer
   z-index: 100
