--- a/pages/lex/intervals/@id/main.scss
+++ b/pages/lex/intervals/@id/main.scss
@@ -1,7 +1,6 @@
 .int-names {
     display: flex;
     gap: 5px;
-    flex-direction: column;
     
     .int-name {
         padding: 2px 6px;
@@ -118,4 +117,25 @@ ul, h3 {
 
 .divider {
     width: 100%;
+}
+
+.legend-item {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+
+    p {
+        margin: 0;
+    }
+}
+
+.box {
+    height: 15px;
+    width: 15px;
+    border-radius: 3px;
+}
+
+.charts {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
 }
