--- a/pages/lex/intervals/@id/main.scss
+++ b/pages/lex/intervals/@id/main.scss
@@ -139,3 +139,9 @@ ul, h3 {
     display: grid;
     grid-template-columns: 33% 33% 33%;
 }
+
+.area {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
