--- a/pages/publications/main.module.sass
+++ b/pages/publications/main.module.sass
@@ -1,11 +1,11 @@
-.htnl, .body, .main
+.htnl, .body, .main, .publications
     background-color: white
     color: black !important
 
-#publications
-  margin: 8vh 20% 5vh 20%
+.publications
+  padding: 8vh 20% 5vh 20%
 
-#container
+.container
   background-color: white
 
 a:hover
@@ -13,15 +13,15 @@ a:hover
 
 .big
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   text-align: center
 
 .pub-line
-  width: 60%;
-  border-bottom: 1px solid black;
-  position: absolute;
+  width: 60%
+  border-bottom: 1px solid black
+  position: absolute
 
-#pub-title 
+.pub-title 
   text-align: left
   position: relative
   margin: 0
@@ -38,8 +38,8 @@ a:hover
     counter-increment: pub-counter -1
 
   li::marker
-    font-size: 35px;
-    color: #babdc8;
+    font-size: 35px
+    color: #babdc8
     content: counter(pub-counter) " "
     counter-increment: pub-counter
 
