--- a/pages/people/main.module.sass
+++ b/pages/people/main.module.sass
@@ -1,4 +1,4 @@
-.htnl, .body, .main
+.html, .body, .main
     color: black
     background-color: white
 
@@ -34,40 +34,39 @@ a:hover
         width: 45%
         position: relative
 
-        img
+        .back-img
+            position: relative
+            z-index: 0
+            object-fit: cover
+            width: 100%
             height: 100%
 
         a
             color: white !important
-    .description
-        display: flex
-        flex-direction: column
-        gap: .25em
-        text-align: right
-        position:absolute
-        padding: 5px 20px
-        z-index: 100
-        color: white
-        background-color: rgba(0, 0, 0, 0.2)
-        bottom:0
-        right: 0
-        white-space: nowrap
-        margin: 5px
-
-        p 
-            margin: 0 !important
-
-        a
+            
+        .description
+            position: absolute
+            bottom: 0
+            right: 0
+            display: flex
+            flex-direction: column
+            gap: .25em
+            text-align: right
+            padding: 5px 20px
+            z-index: 100
             color: white
+            background-color: rgba(0, 0, 0, 0.2)
+            white-space: nowrap
+            margin: 5px
 
-        a:hover
-            color: white
+            p 
+                margin: 0 !important
 
-.back-img
-    position:absolute
-    z-index: 0
-    object-fit: cover
-    width: 100%
+            a
+                color: white
+
+            a:hover
+                color: white
 
 .role
     font-weight: 400px
@@ -87,6 +86,7 @@ a:hover
     input
         background-color: white
         color: black
+        margin: 0
 
 .divider
     background-color: black
@@ -95,13 +95,16 @@ a:hover
 .input-container
     display: flex
     align-items: center
+    justify-content: center
     gap: 5px
-    width: 80%
+    width: 100%
+    margin-bottom: 1em
 
 .tags
     display: flex
     color: white
     gap: 5px
+    justify-content: center
 
     .filter-card
         padding: 2px 5px
