--- a/pages/about/main.module.sass
+++ b/pages/about/main.module.sass
@@ -58,44 +58,42 @@ a:hover
 
 .title-about
   font-size: 72px
-  font-family: "Maven Pro", sans-serif;
+  font-family: "Maven Pro", sans-serif
   text-align: left
   margin-left: 20%
   padding: 0
 
 
-#api  
-  position: relative
-  height: 30vh
-  background-color: white
-
-#api-circle-text
-  display: table-cell;
-  vertical-align: middle;
-  color: #6bbe98;
-  font-size: 72px
-  font-weight: 500
+.api  
+  height: 200px
+  width: 60%
+  margin-left: 20%
 
 .api-circle
   float: left
-  margin-left: 15%
   margin-right: 50px
-  background-color: #fff;
-  height: 200px;
-  width: 200px;
-  border-radius: 50%;
-  text-align: center;
-  display: table;
-  border: 11px solid #6bbe98;
-  color: #4BABBf;
+  background-color: #fff
+  height: 200px
+  width: 200px
+  border-radius: 50%
+  text-align: center
+  display: table
+  border: 11px solid #6bbe98
+
+  .api-circle-text
+    display: table-cell
+    vertical-align: middle
+    color: #6bbe98 !important
+    font-size: 72px
+    font-weight: 500
 
 #api-text
   padding-top: 50px
   margin-right: 15%
-  color: #4bab7f;
-  font-size: 20px;
-  line-height: 28px;
-  font-weight: 400;
+  color: #4bab7f
+  font-size: 20px
+  line-height: 28px
+  font-weight: 400
 
 
 #about  
@@ -103,14 +101,14 @@ a:hover
 
 .about-row
   margin: 4%
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 200;
+  font-size: 18px
+  line-height: 28px
+  font-weight: 200
 
 .about-body-subtitle
   float: left
-  font-size: 22px;
-  font-weight: 200;
+  font-size: 22px
+  font-weight: 200
 
 .about-body
   margin-left: 30%
@@ -121,10 +119,9 @@ a:hover
   position: relative
   padding-bottom: 0
 
-.line
-  width: 60%;
-  border-bottom: 1px solid black;
-  position: absolute;
+.divider
+  width: 60%
+  background-color: black
 
 .rock-border
   width: 100%
