support light mode

--- a/pages/about/main.module.sass
+++ b/pages/about/main.module.sass
@@ -1,12 +1,7 @@
-.html, .body, #apps
-    color: black
-    background-color: white
-
 h1
   margin: 0
 
 .body
-  background-color: white
   padding-top: 5vh
 
 .apps
@@ -26,7 +21,7 @@ a:hover
   width: 60%
   margin: 0 20%
   position: relative
-  color: black
+  color: var(--text-color)
 
   img
     height: 80%
