--- a/pages/main.module.sass
+++ b/pages/main.module.sass
@@ -129,7 +129,7 @@ a
   justify-content: center
 
   a
-    color: white !important
+    color: var(--text-emphasized-color) !important
     text-decoration: none
 
     &:hover
@@ -233,7 +233,7 @@ a
   font-size: 18px
 
   a
-    color: black
+    color: black !important
     font-weight: bold
     text-decoration: none
 
