--- a/pages/publications/main.module.sass
+++ b/pages/publications/main.module.sass
@@ -1,12 +1,8 @@
-.htnl, .body, .main, .publications
-    background-color: white
-    color: black !important
-
 .publications
   padding: 8vh 20% 5vh 20%
 
 .container
-  background-color: white
+  background-color: var(--background-color)
 
 a:hover
     text-decoration: none
@@ -26,13 +22,11 @@ a:hover
   position: relative
   margin: 0
   padding: 0
-  color: black
 
 .pub-list
   padding-top: 10px
   margin-left: 20px
   counter-reset: pub-counter 70
-  color: black
 
   li
     counter-increment: pub-counter -1
@@ -45,4 +39,3 @@ a:hover
 
 .blurb
   font-size: 15px
-  color: black
