--- a/pages/lex/main.module.scss
+++ b/pages/lex/main.module.scss
@@ -1,3 +1,11 @@
+body.bp5-light {
+  --img-color: none;
+}
+
+body.bp5-dark {
+  --img-color: invert(1);
+}
+
 .int-names {
     display: flex;
     gap: 5px;
@@ -109,8 +117,8 @@ ul, h3 {
         align-items: center;
         gap: 10px;
 
-        img {
-            filter: invert(1)
+        .taxa-image {
+            filter: var(--img-color);
         }
     }
 }
