--- a/pages/maps/main.module.scss
+++ b/pages/maps/main.module.scss
@@ -15,9 +15,9 @@ h1 {
 .maps-list {
   padding: 0;
   display: flex;
+  flex-direction: column;
   column-gap: 1em;
   row-gap: 0;
-  flex-wrap: wrap;
 
   .link-title {
     display: flex;
