--- a/pages/lex/main.module.scss
+++ b/pages/lex/main.module.scss
@@ -1,11 +1,3 @@
-body.bp5-light {
-  --img-color: none;
-}
-
-body.bp5-dark {
-  --img-color: invert(1);
-}
-
 .int-names {
     display: flex;
     gap: 5px;
@@ -118,7 +110,7 @@ ul, h3 {
         gap: 10px;
 
         .taxa-image {
-            filter: var(--img-color);
+            filter: invert(1);
         }
     }
 }
