fix loading screen

--- a/pages/layout.module.sass
+++ b/pages/layout.module.sass
@@ -103,3 +103,11 @@
 
   #who-made-it
     padding-top: 25px
+
+.loading
+  text-align: center
+  padding-top: 20vh
+  height: 100vh
+  display: flex
+  flex-direction: column
+  gap: 2em
