--- a/pages/main.module.sass
+++ b/pages/main.module.sass
@@ -20,7 +20,7 @@ a
   display: flex
   justify-content: center
   align-items: center
-  height: 100vh
+  height: 50vh
   color: white
 
   li
@@ -43,6 +43,7 @@ a
   gap: 20px
   height: 95vh
   justify-content: center
+  height: 50vh
 
   .header
     text-shadow: black 1px 0 10px
@@ -72,7 +73,7 @@ a
   z-index: 5
   left: 0px
   top: 0px
-  height: 100vh
+  height: 50vh
   width: 100%
   object-fit: cover
 
@@ -124,9 +125,9 @@ a
   font-size: 20px
   padding: 0px
   display: flex
-  gap: 20px
-  flex-wrap: wrap
-  justify-content: center
+  flex-direction: column
+  width: 60%
+  margin-left: 20%
 
   a
     color: var(--text-emphasized-color) !important
@@ -137,7 +138,6 @@ a
 
 .rockd-button-container
   display: flex
-  justify-content: center
   align-items: center
   gap: 5px
 
